@@ -1,3 +1,7 @@
+2013-11-17  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* Makefile.am (dist_man_MANS): Add inplace.3am.
+
 2013-10-23  Michael Haubenwallner <michael.haubenwallner@salomon.at>
 
 	Fix portability for AIX.
